Created CSV parser and added classes: stock, obligation, metal

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,17 @@
 cmake_minimum_required(VERSION 3.20)
 project(BrokerApp)
 
-set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD 17)
 set(SOURCE_FILES
+    include/investments/investment.cpp
+    include/investments/stock.cpp
+    include/investments/obligation.cpp
+    include/investments/metal.cpp
     include/fund.cpp
-    include/investment.cpp
+    include/market.cpp
     include/utils/utils.cpp
     include/utils/date.cpp
+    include/utils/csv_parser.cpp
     main.cpp)
 
 include_directories(include)
